rust/foxglove/src/protocol/common/client/snapshots/foxglove__protocol__common__client__set_parameters__tests__encode.snap
---
source: rust/foxglove/src/protocol/common/client/set_parameters.rs
expression: message()
---
{
  "op": "setParameters",
  "parameters": [
    {
      "name": "empty"
    },
    {
      "name": "int",
      "value": 123
    },
    {
      "name": "int[]",
      "value": [
        123,
        456
      ]
    },
    {
      "name": "f64",
      "type": "float64",
      "value": 1.23
    },
    {
      "name": "f64[]",
      "type": "float64_array",
      "value": [
        1.23,
        4.56
      ]
    },
    {
      "name": "str",
      "value": "hello"
    },
    {
      "name": "byte[]",
      "type": "byte_array",
      "value": "ECAw"
    },
    {
      "name": "bool",
      "value": true
    }
  ]
}
